# Midterm1

./: CMakeLists.txt  README.md
contest 1/: 1.2.cpp  1.3.cpp  1.4.cpp  1.5.cpp  1.6.cpp  1.8.cpp  test.cpp
contest 2/: 2.1.cpp  2.2.cpp  2.3.cpp
contest 3/: 3.1.cpp  3.2.cpp  3.3.cpp  3.4.cpp  3.5.cpp  3.6.cpp
contest 4/: Solution.h  main.cpp
contest 5/: 5.1.cpp  5.2.cpp  5.3.cpp  5.4.cpp  5.5.cpp
data/: input.txt
