cmake_minimum_required(VERSION 3.27)
project(Midterm1)

set(CMAKE_CXX_STANDARD 14)

add_executable(TEST "contest 1/test.cpp")
add_executable(_1.2 "contest 1/1.2.cpp")
add_executable(_1.3 "contest 1/1.3.cpp")
add_executable(_1.4 "contest 1/1.4.cpp")
add_executable(_1.5 "contest 1/1.5.cpp")
add_executable(_1.6 "contest 1/1.6.cpp")
add_executable(_1.8 "contest 1/1.8.cpp")
add_executable(_2.1 "contest 2/2.1.cpp")
add_executable(_2.2 "contest 2/2.2.cpp")
add_executable(_2.3 "contest 2/2.3.cpp")
add_executable(_3.1 "contest 3/3.1.cpp")
add_executable(_3.2 "contest 3/3.2.cpp")
add_executable(_3.3 "contest 3/3.3.cpp")
add_executable(_3.4 "contest 3/3.4.cpp")
add_executable(_3.5 "contest 3/3.5.cpp")
add_executable(_3.6 "contest 3/3.6.cpp")
add_executable(_4 "contest 4/main.cpp")
add_executable(_5.1 "contest 5/5.1.cpp")
add_executable(_5.3 "contest 5/5.3.cpp")
add_executable(_5.4 "contest 5/5.4.cpp")
add_executable(_5.5 "contest 5/5.5.cpp")